# server/controllers/customer.controller.js
@@ -6,7 +6,22 @@ const create = async(req,res) =>{
     const customer=new Customer(req.body)
     console.info(`save customer`)
     try{
-
+        let isPhoneUsed = true
+        Customer.find({phone : customer.phone}, function(err, customers){
+            if(err){
+              console.log(err)
+            };
+            if(!customers.length){
+                isPhoneUsed=false
+            }
+        })
+  
+        if(isPhoneUsed){
+            console.error("phone already exists")
+            return res.status(400).json({error : "phone already exists"})
+        }
+        
+        
         await customer.save()
         console.info(`customer: ${customer.id} is saved`)
 
@@ -82,22 +97,35 @@ const createMemberLevel= async(req,res) =>{
 const getListCustomer = async(req,res) => {
     try{
         console.info('get list customer')
-        const filters = req.query;
-        let customers= await Customer.find().select('name phone')
 
-        customers =customers.filter(customer =>{
-            let isValid =true
-            for (let key in filters){
-                
-                console.log(key, customer[key], filters[key])
+        const current = parseInt(req.query.page)-1
+        const pagesize = parseInt(req.query.pagesize)
+        const name =  req.query.name
+        const phone = req.query.phone
+        const created = req.query.created
+        let customers= await Customer.find().select('name phone created')
 
-                isValid = isValid && customer[key] == filters[key]
-            }
-            return isValid;
-        })
-
+        console.info(`get customers from repository success`)
+        customers =customers.filter(customer =>
+            (   (name===undefined || customer.name.includes(name)) 
+                && (phone=== undefined || customer.phone.includes(phone))
+                && (created === undefined || customer.created >= new Date(created))
+            ) 
+        )
+        const total = customers.length
+        console.info(`total: ${total}`)
+        if(current*pagesize < customers.length){
+            customers=customers.slice(current*pagesize, Math.min((current+1)*pagesize,customers.length))
+        }
+      
         console.info('get list customer finished')
-        res.json(customers)
+        
+        res.json({
+            page : (current+1) ,
+            pagesize : pagesize,
+            total: total,
+            customers : customers
+        })
     }
     catch (err) {
         console.error(err)
@@ -110,23 +138,44 @@ const getListCustomer = async(req,res) => {
 const getListMember = async(req,res) => {
     try{
         console.info('get list members')
-        const filters = req.query;
+
+        const current = parseInt(req.query.page)-1
+        const pagesize = parseInt(req.query.pagesize)
+        const name =  req.query.name
+        const phone = req.query.phone
+        const id = req.query.id
+        const created = req.query.created
 
         let members= await Customer.find({memberCode: {$exists:true}})
-        .select('name phone memberCode emai birthday memberLevel')
+        .select('name phone memberCode emai birthday memberLevel created')
         .populate('memberLevel', 'name') 
         members =members.filter(member =>{
-            let isValid =true
-            for (let key in filters){
-                
-                console.log(key, member[key], filters[key])
-
-                isValid = isValid && member[key] == filters[key]
-            }
-            return isValid;
+            if((name!=='undefined' && member.name===name) 
+                || (phone!== 'undefined' && member.phone === phone)
+                || (id!== 'undefined' && member._id === id)
+                || (created !== 'undefined' && member.created > created)
+            )
+            return true
+            else return false
         })
+
+        const total = members.size()
+        console.info(total)
+        if(current*pagesize < members.size()){
+            members=members.subarray(current*pagesize, Math.min((current+1)*pagesize,members.size()))
+        }
+        else{
+            members.clear()
+        }
+
         console.info('get list members finished')
-        res.json(members)
+
+        res.json({
+            current : current+1,
+            pagesize : pagesize,
+            total: total,
+            members : members
+        })
     }
     catch (err) {
         console.error(err)
