# server/swagger_output.json
@@ -9,7 +9,8 @@
   "basePath": "/",
   "tags": [],
   "schemes": [
-    "http"
+    "http",
+    "https"
   ],
   "consumes": ["application/json"],
   "produces": ["application/json"],
@@ -20,10 +21,11 @@
         "description": "Signin by username, password",
         "parameters": [
           {
-            "name": "userName"
-          },
-          {
-            "name" :"password"
+            "in": "body",
+            "name" : "body",
+            "schema" : {
+              "$ref": "#/definitions/login"
+            }
           }
         ],
         "responses": {}
@@ -32,34 +34,79 @@
     "/auth/signout": {
       "get": {
         "tags": ["auth"],
-        "description": "",
+        "description": "logout",
         "parameters": [],
         "responses": {}
       }
     },
     "/api/customer": {
       "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      },
+        "tags": ["customer"],
+        "description": "get list customer",
+        "parameters": [{
+          "name" : "page",
+          "in" : "query",
+          "type": "integer",
+          "format": "int64",
+          "required" : "true",
+          "example" : 1
+        },{
+          "name" : "pagesize",
+          "in" : "query",
+          "type": "integer",
+          "format": "int64",
+          "required" : "true",
+          "example" : 10
+        },
+        {
+          "name" : "name",
+          "in" : "query",
+          "type" : "string"
+        },
+        {
+          "name" : "phone",
+          "in" : "query",
+          "type" : "string"
+        },
+        {
+          "name" : "created",
+          "in" : "query",
+          "type" : "date",
+          "format": "date"
+        }],
+        "responses": {},
+        "security" :
+          [
+           { "Authorization": []}
+          ]
+        },
       "post": {
-        "tags": [],
+        "tags": ["customer"],
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "in": "body",
+            "name" : "body",
+            "schema" : {
+              "$ref": "#/definitions/customer"
+          }
+        }],
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       }
     },
     "/api/member": {
       "get": {
-        "tags": [],
+        "tags": ["member"],
         "description": "",
         "parameters": [],
         "responses": {}
       },
       "post": {
-        "tags": [],
+        "tags": ["member"],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -67,13 +114,13 @@
     },
     "/api/member/level": {
       "get": {
-        "tags": [],
+        "tags": ["member"],
         "description": "",
         "parameters": [],
         "responses": {}
       },
       "post": {
-        "tags": [],
+        "tags": ["member"],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -81,44 +128,102 @@
     },
     "/api/products": {
       "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
+        "tags": ["products"],
+        "description": "get list products",
+        "parameters": [{
+          "name" : "page",
+          "in" : "query",
+          "type": "integer",
+          "format": "int64",
+          "required" : "true",
+          "example" : 1
+        },{
+          "name" : "pagesize",
+          "in" : "query",
+          "type": "integer",
+          "format": "int64",
+          "required" : "true",
+          "example" : 10
+        },
+        {
+          "name" : "name",
+          "in" : "query",
+          "type" : "string"
+        },
+        {
+          "name" : "category",
+          "in" : "query",
+          "type" : "string"
+        },
+        {
+          "name" : "topprice",
+          "in" : "query",
+          "type" : "interger",
+          "format": "int64"
+        },
+        {
+          "name" : "botprice",
+          "in" : "query",
+          "type" : "interger",
+          "format": "int64"
+        }],
         "responses": {}
       },
       "post": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": ["products"],
+        "description": "create new product",
+        "parameters": [{
+          "in": "body",
+          "name" : "body",
+          "schema" : {
+            "$ref": "#/definitions/product"
+        }
+      }],
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       }
     },
     "/api/products/{productId}": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": ["products"],
+        "description": "get product by id",
         "parameters": [],
         "responses": {}
       },
       "put": {
-        "tags": [],
-        "description": "",
+        "tags": ["products"],
+        "description": "update product ",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       },
       "delete": {
-        "tags": [],
-        "description": "",
+        "tags": ["products"],
+        "description": "delete product",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       }
     },
     "/api/users": {
       "get": {
-        "tags": [],
+        "tags": ["users"],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       },
       "post": {
         "tags": [],
@@ -129,23 +234,44 @@
     },
     "/api/users/{userId}": {
       "get": {
-        "tags": [],
+        "tags": ["users"],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       },
       "put": {
-        "tags": [],
+        "tags": ["users"],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       },
       "delete": {
-        "tags": [],
+        "tags": ["users"],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {},
+        "security" :
+        [
+          { "Authorization": []}
+        ]
       }
+    }
+  },
+  "securityDefinitions": 
+  {
+    "Authorization":
+    {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
     }
   },
   "definitions": {
@@ -184,6 +310,65 @@
           "type" : "string"
         }
       }
+    },
+    "login" : {
+      "type" : "object",
+      "properties" : {
+        "userName" : {
+          "type" : "string",
+          "example" : "admin"
+        },
+        "password" : {
+          "type" : "string",
+          "example" : "admin123456"
+        }
+      }
+    },
+    "customer" : {
+      "type" : "object",
+      "required" : ["name", "phone"],
+      "properties" :
+        {
+          "name" :  {
+            "type" : "string",
+            "example" : "Nguyen Van A"
+            },
+          "phone" : {
+            "type" : "string",
+            "example" : "0123456789"
+          },
+          "birthday" : {
+            "type" : "date",
+            "example" : "2021-9-15"
+          },
+          "email" : {
+            "type" : "string",
+            "example" : "user@mail.com"
+          }
+        }
+    },
+    "product" : {
+      "type" : "object",
+      "required" : ["name"],
+      "properties" :
+        {
+          "name" :  {
+            "type" : "string",
+            "example" : "Caffe den"
+            },
+          "description" : {
+            "type" : "string",
+            "example" : "Cafe lam tu hat cafe nguyen chat"
+          },
+          "category" : {
+            "type" : "string",
+            "example" : "TEA"
+          },
+          "price" : {
+            "type" : "int",
+            "example" : "20000"
+          }
+        }
     }
   }
 }
